--- a/style.css
+++ b/style.css
@@ -3,8 +3,11 @@
 body{
     font-family: 'Roboto Condensed', sans-serif;
     margin: 0;
-    background: #eee;
+    background: rgb(110, 110, 110);
     height: auto;
+}
+p{
+    color: snow;
 }
 
 h1{
@@ -19,11 +22,17 @@ h2{
     font-size: 1.2rem;
     text-transform: capitalize;
     margin: 0;
+    color: bisque;
 }
 
 img{
     display: block;
     width: 100%;
+}
+
+ul{
+    color:snow;
+    font-size: larger;
 }
 
 main{
@@ -33,7 +42,7 @@ main{
 }
 
 #landing{
-    background: #fff;
+    background:rgb(110, 110, 110);
 
 }
 
@@ -46,9 +55,15 @@ main{
     text-align: center;
     padding-right: 1rem;
     padding-left: 1rem;
+    color: bisque;
 }
+
 #landing-text h2{
-    color: #888;
+    color: rgb(230, 227, 227);
+}
+
+#landing-text a{
+    color:blanchedalmond;
 }
 
 #landing-image{
@@ -60,6 +75,7 @@ main{
     flex:0 1 60vw;
     margin: 0;
 }
+
 
 .btn{
     padding: 0.5rem 2rem;
@@ -74,6 +90,7 @@ main{
 
 .btn:hover{
     background: #a9e9e0;
+    color: rgb(0, 0, 0);
 }
 
 #header {
@@ -106,7 +123,7 @@ footer{
     text-align: center;
     padding: 2rem 1rem;
     margin: auto;
-    color: #333;
+    color: rgb(201, 201, 201);
 }
 
 footer h3{
